[package]
name = "jobqu"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true

[features]
default = []
sqlite = ["dep:sqlx", "sqlx/sqlite", "sqlx/runtime-tokio"]
memory = []

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json ={ version = "1.0" }
async-trait = { version = "0.1" }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7" }
chrono = { version = "0.4" }

# Optional dependencies
sqlx = { optional = true, version = "0.8" }
